--- a/manifest.json
+++ b/manifest.json
@@ -18,9 +18,10 @@
   "shape_calculator_class": "$Resource:res://addons/surface_tiler/src/calculators/corner_match_tileset_shape_calculator.gd",
   "tilesets": [
     {
+      "recalculate_tileset": "$Resource:res://addons/surface_tiler/src/plugin/recalculate_tileset_custom_property.gd",
       "tileset_quadrants_path": "res://addons/surface_tiler/assets/images/tileset_quadrants.png",
       "tileset_corner_type_annotations_path": "res://addons/surface_tiler/assets/images/tileset_corner_type_annotations.png",
-      "tile_set": "$Resource:res://addons/squirrel_away/src/tiles/squirrel_away_tileset_with_many_angles.tres",
+      "tile_set": null,
       "quadrant_size": 16,
       "subtile_collision_margin": 3,
       "are_45_degree_subtiles_used": true,
