--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
       "recalculate_tileset": "$Resource:res://addons/surface_tiler/src/plugin/recalculate_tileset_custom_property.gd",
       "tileset_quadrants_path": "res://addons/surface_tiler/assets/images/tileset_quadrants.png",
       "tileset_corner_type_annotations_path": "res://addons/surface_tiler/assets/images/tileset_corner_type_annotations.png",
-      "tile_set": null,
+      "tile_set": "$Resource:res://addons/squirrel_away/src/tiles/squirrel_away_tileset_with_many_angles.tres",
       "quadrant_size": 16,
       "subtile_collision_margin": 3,
       "are_45_degree_subtiles_used": true,
