Create a reusable FrameworkPlugin parent class.

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -8,4 +8,4 @@ description="Advanced autotiling:
 - Uses a corner-type annotation system for defining the shapes of each quadrant in the tileset."
 author="Snoring Cat"
 version="0.5"
-script="src/plugin/plugin.gd"
+script="src/plugin/surface_tiler_plugin.gd"
