Create separate plugin boilerplate for each framework.

--- a/plugin.cfg
+++ b/plugin.cfg
@@ -1,11 +1,8 @@
 [plugin]
 
 name="Surface Tiler"
-description="Advanced autotiling:
-- Supports 90° and 45° surfaces.
-- Supports exterior-to-interior art transitions spanning two subtiles.
-- Dynamically constructs each subtile by separately selecting each of its four constituent quadrants according to the local topography of the corresponding cell in the TileMap.
-- Uses a corner-type annotation system for defining the shapes of each quadrant in the tileset."
+description="Next-level autotiling.
+https://github.com/SnoringCatGames/surface_tiler"
 author="Snoring Cat"
 version="0.5"
 script="src/plugin/surface_tiler_plugin.gd"
